# TCC

./: README.md  analiseEmbeddings.py  app.py  build._faiss.py  chunks.pkl  evaluate-reduzido.py  evaluate-reduzido_Gemini.py  evaluate.py  populate_db.py  pyproject.toml  ragas_evaluation_results_8B_4k.csv  ragas_evaluation_results_Gemini.csv  test.py  vetores.csv
Resultados_Gemini/: ragas_evaluation_results_gemini_2k.csv  ragas_evaluation_results_gemini_5k.csv  ragas_evaluation_results_gemini_5k_Nan.csv  ragas_evaluation_results_gemini_8k.csv  ragas_evaluation_results_gemini_8k_original.csv  visualizacao_resultados_ragas_evaluation_results_gemini_2k.html  visualizacao_resultados_ragas_evaluation_results_gemini_5k.html  visualizacao_resultados_ragas_evaluation_results_gemini_5k_Nan.html  visualizacao_resultados_ragas_evaluation_results_gemini_8k.html
Resultados_Gemini_2/: ragas_evaluation_results_gemini_2k_2.csv  ragas_evaluation_results_gemini_5k_2.csv  ragas_evaluation_results_gemini_8k_2.csv  visualizacao_resultados_ragas_evaluation_results_gemini_2k_2.html  visualizacao_resultados_ragas_evaluation_results_gemini_5k_2.html  visualizacao_resultados_ragas_evaluation_results_gemini_8k_2.html
Resultados_Llama_8B/: ragas_evaluation_results_8B_2k.csv  ragas_evaluation_results_8B_5k.csv  ragas_evaluation_results_8B_8k.csv  visualizacao_resultados_ragas_evaluation_results_8B_2k.html  visualizacao_resultados_ragas_evaluation_results_8B_5k.html  visualizacao_resultados_ragas_evaluation_results_8B_8k.html
Resultados_Llama_8B_2/: ragas_evaluation_results_8B_2k_2.csv  ragas_evaluation_results_8B_5k_2.csv  (+4 more)
utils/: Comparativo.py  (+6 more)
(+5956 files in other folders)
