[project]
name = "tcc"
version = "0.1.0"
description = "ChatBot com RAG UDESC"
authors = [
    {name = "Lucas Pietro Biasi Rayzer",email = "145388833+LucasRayzer@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "3.12.7"
dependencies = [
    "streamlit (>=1.49.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pylance (>=0.35.0,<0.36.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)",
    "openai (>=1.106.1,<2.0.0)",
    "tiktoken (>=0.11.0,<0.12.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "streamlit-chat (>=0.1.1,<0.2.0)",
    "instructorembedding (>=1.0.1,<2.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "accelerate (>=1.10.1,<2.0.0)",
    "transformers (>=4.56.1,<5.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "langchain-google-genai (>=2.1.12,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"